kube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: hello-world
  labels:
    app: app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: app
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: mxssl/hello-world
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "1"
          limits:
            memory: "256Mi"
            cpu: "1"
        livenessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 9
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /ready-check
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 2
        ports:
          - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: app
