kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: hello-world
spec:
  selector:
    app: app
  ports:
    - name: app
      port: 80
      targetPort: 80
      protocol: TCP
