kube/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: hello-world
spec:
  rules:
  - host: hello-world.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
